contour/manifests/backend-httpbin-with-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: tsaarni/httpbin:latest
        ports:
          - containerPort: 443
        volumeMounts:
        - mountPath: /run/secrets/certs/
          name: httpbin-cert
          readOnly: true
        - mountPath: /run/secrets/ca
          name: ca-cert
          readOnly: true
        command: ["/bin/sh"]
        # Configure Gunicorn HTTP server to terminate TLS
        #   - server certificate and key
        #   - require client certificate and validate against trusted CA cert
        #     --cert-reqs 0 == ssl.CERT_NONE
        #     --cert-reqs 1 == ssl.CERT_OPTIONAL
        #     --cert-reqs 2 == ssl.CERT_REQUIRED
        args:
          - "-c"
          - "hypercorn -b 0.0.0.0:443 --access-logfile - --cert-reqs 2 --ca-cert /run/secrets/ca/ca.crt --certfile /run/secrets/certs/httpbin.pem --keyfile /run/secrets/certs/httpbin-key.pem httpbin:asyncio_app -k asyncio"
      volumes:
      - name: httpbin-cert
        secret:
          secretName: httpbin
      - name: ca-cert
        secret:
          secretName: internal-root-ca
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  annotations:
#    projectcontour.io/upstream-protocol.h2: "443"
  labels:
    app: httpbin
spec:
  ports:
  - name: https
    port: 443
  selector:
    app: httpbin
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpbin
spec:
  virtualhost:
    fqdn: host1.127-0-0-101.nip.io
    tls:
      secretName: ingress
  routes:
    - services:
        - name: httpbin
          port: 443
          protocol: h2
          validation:
            caSecret: internal-root-ca
            subjectName: httpbin
#---
#apiVersion: contour.heptio.com/v1beta1
#kind: IngressRoute
#metadata:
#  name: httpbin
#spec:
#  virtualhost:
#    fqdn: host1.127-0-0-101.nip.io
#    tls:
#      secretName: ingress
#  routes:
#    - match: /
#      services:
#      - name: httpbin
#        port: 443
#        validation:
#          caSecret: internal-root-ca
#          subjectName: httpbin
